Fix issue where to do item jumps when editting

--- a/src/App.scss
+++ b/src/App.scss
@@ -135,7 +135,6 @@ button {
 .form-control {
     border: 2px solid $lite;
     border-radius: $radius;
-    height: $height;
     padding: $unit/4;
 }
 
