--- a/src/components/AddTodo.scss
+++ b/src/components/AddTodo.scss
@@ -17,6 +17,7 @@
 	}
 
 	.form-control {
+		height: $height;
 		width: 100%;
 	}
 
